[package]
name = "greptimedb-ros-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
r2r = "0.9"
greptimedb-ingester = { git = "https://github.com/GreptimeTeam/greptimedb-ingester-rust.git", tag = "v0.15.0" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
